--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 /* 1. Basics*/
 
 body {
-	background-color: #2D2D2A;
+	background-color: #b7dfe3;
 	color: white;
 	margin: 40px 90px 40px 90px;
 }
