--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,9 +129,25 @@ nav ul {
 }
 
 
+/* map */
+.marker {
+  background-image: url('../img/mapbox-icon.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
+.mapboxgl-popup {
+  max-width: 200px;
+}
 
-
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  color: black;
+}
 
 
 
@@ -142,3 +158,15 @@ footer {
 	justify-content: center;
 	color: gray;
 }
+
+
+
+
+
+
+
+
+
+
+
+
