--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,12 +130,8 @@ nav ul {
 
 
 /* map */
-.marker {
-  background-image: url('../img/mapbox-icon.png');
-  background-size: cover;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+.fa-map-marker-alt {
+color: red;
   cursor: pointer;
 }
 
@@ -150,6 +146,11 @@ nav ul {
 }
 
 
+/* sketch */
+#canvas {
+  background-color: white;
+  border: 1px solid black;
+}
 
 /* footer */
 footer {
