--- a/public/css/mediaqueries.css
+++ b/public/css/mediaqueries.css
@@ -61,14 +61,14 @@
 
 	/*footer*/
 	footer {
-		position: relative;
+		/*position: relative;
 		margin-top: 20px;
-		    height: 80px;
+		    height: 80px;*/
 	}
 
 	footer p {
-		position: absolute;
-		bottom: 0px;
+		/*position: absolute;
+		bottom: 0px;*/
 	}
 
  }
@@ -77,6 +77,10 @@
 /*===========================================================*/
 /*  Medium devices (tablets, 768px and up)*/
 @media (max-width: 768px) {
+
+	#containerAll {
+    height: 4000px;
+	}
 
 	/* navbar*/
 	#logoHeader{
@@ -96,6 +100,10 @@
 	}
 	
 	/*section 2 : map*/
+	#section2{
+		height: 2300px;
+	}
+
 	#zoneReservation {
 		flex-direction: column;
 	}
@@ -120,5 +128,14 @@
 
 /*===========================================================*/
 
-/* Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { }*/
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+
+	#containerAll {
+    height: 3200px;
+	}
+
+	#section2 {
+		height: 1000px;
+	}
+ }
